Use Java 8 method rather than Java 11